# Cobalt

./: .gitignore  Cargo.toml  ideas.md  readme.md  todo.md
.github/workflows/: rust.yml
cobalt_asset_manager/: Cargo.toml
cobalt_asset_manager/src/: main.rs
cobalt_asset_manager/src/components/: asset.rs
cobalt_asset_manager/src/pages/: import_assets.rs  mod.rs  view_assets.rs
cobalt_assets/: Cargo.toml
cobalt_assets/src/: asset.rs  lib.rs  manifest.rs  server.rs  tests.rs
cobalt_core/: Cargo.toml
cobalt_core/src/: lib.rs  stats.rs
cobalt_core/src/asset_types/: mesh.rs  mod.rs  texture.rs
cobalt_core/src/assets/: asset.rs  manifest.rs  mod.rs  pack.rs  server.rs  tests.rs
cobalt_core/src/assets/types/: mod.rs  texture.rs
cobalt_core/src/assets_types/: gltf.rs  mod.rs  texture.rs
cobalt_core/src/components/: entity_name.rs  mod.rs  state.rs  transform.rs
cobalt_core/src/ecs/: component.rs  entity.rs  mod.rs  query.rs  storage.rs  tests.rs  typeid_map.rs  world.rs
cobalt_core/src/ecs/query/: mod.rs  query_entity.rs  tests.rs
cobalt_core/src/ecs/query/impls/: mod.rs  query.rs  query_mut.rs
cobalt_core/src/ecs/query/iters/: mod.rs  par_query.rs  query.rs  query_mut.rs
cobalt_core/src/graphics/: bind_groups.rs  cache.rs  context.rs  frame.rs  mod.rs  texture.rs  vertex.rs  window.rs
cobalt_core/src/importers/: gltf.rs  mod.rs  obj.rs  texture.rs
cobalt_core/src/input/: input.rs  mod.rs
cobalt_core/src/internal/: bit_array.rs
cobalt_core/src/renderer/: camera.rs  frame_data.rs  mesh.rs  mod.rs  proj_view.rs  render_pass.rs  renderer.rs
cobalt_core/src/renderer/deferred/: depth_buffer.rs  g_buffers.rs  mod.rs  screen_quad.rs
cobalt_core/src/renderer/deferred/material/: mod.rs
cobalt_core/src/renderer/deferred/passes/: color.rs  color.wgsl  geometry.rs  geometry.wgsl  geometry_debug.rs  geometry_debug.wgsl  mod.rs
cobalt_core/src/renderer/material/: mod.rs  unlit.rs  wireframe.rs
cobalt_core/src/renderer/renderable/: mesh.rs  mod.rs  plane.rs
cobalt_core/src/renderer/shaders/: wireframe.wgsl
cobalt_core/src/scenes/: gltf.rs  mod.rs  scene.rs
cobalt_core/src/types/: aabb.rs  color.rs  either.rs  mod.rs  resource.rs
cobalt_core/src/utils/: as_any.rs  bit_array.rs  mod.rs
cobalt_ecs/: Cargo.toml
cobalt_ecs/src/: component.rs  entity.rs  lib.rs  storage.rs  tests.rs  world.rs
cobalt_ecs/src/query/: mod.rs  query_entity.rs  tests.rs
cobalt_ecs/src/query/impls/: query.rs  query_mut.rs
cobalt_ecs/src/query/iters/: mod.rs  par_query.rs  query.rs  query_mut.rs
cobalt_editor/: Cargo.toml
cobalt_editor/src/: app.rs  main.rs
cobalt_graphics/: Cargo.toml
cobalt_graphics/src/: bind_groups.rs  cache.rs  context.rs  lib.rs  texture.rs
cobalt_pack/: Cargo.toml
cobalt_pack/src/: main.rs
cobalt_runtime/: Cargo.toml
cobalt_runtime/src/: app.rs  lib.rs
cobalt_runtime/src/engine/: builder.rs  engine.rs  mod.rs  run.rs
cobalt_runtime/src/plugins/: manager.rs  mod.rs  plugin.rs
examples/: assets_speed_test.rs  hecs_query.rs  query_iter.rs
examples/game/: Cargo.toml  build.rs
examples/game/assets/: jet.mtl  volkswagen.mtl
examples/game/src/: main.rs
examples/sponza/: Cargo.toml
examples/sponza/raw_assets/lemon/: lemon_2k.gltf
examples/sponza/raw_assets/sponza/: sponza.gltf
examples/sponza/src/: main.rs
examples/test_scene/: Cargo.toml
examples/test_scene/assets/: asset_1.asset  beetle.asset  bunny.asset  dragon.asset  horse.asset  logo.asset  logo_compressed.asset  manifest.toml  teapot.asset  test.asset
examples/test_scene/assets/test/: logo.asset  logo_compressed.asset
examples/test_scene/src/: main.rs  main_old.rs  test_plugin.rs
src/: component.rs  dev_gui.rs  engine.rs  graphics.rs  input.rs  lib.rs  resource.rs  script.rs  stats.rs  transform.rs
src/assets/: build.rs  cpak.md  mod.rs
src/components/: parent.rs
src/ecs/: component.rs  mod.rs  query.rs  save_file.md  serialize.rs  storage.rs  typeid_map.rs
src/graphics/: mod.rs  texture.rs  vertex.rs
src/internal/: aabb.rs  arena.rs  as_any.rs  bit_array.rs  fat_ptr.rs  jobs.rs  map.rs  mod.rs  queue.rs  slot_map.rs  unsized_storage.rs
src/plugins/: mod.rs
src/plugins/debug_gui/: mod.rs
src/plugins/debug_gui/windows/: assets.rs  heirarchy.rs  mod.rs  scene_serde.rs  stats.rs
src/renderer/: camera.rs  default_pipelines.rs  light.rs  material.rs  mesh.rs  mod.rs  proj_view.rs  sprite.rs  sprite.wgsl  sprite_pipeline.rs  texture.rs  view_proj.rs
src/renderer/material/: mod.rs  unlit.rs  wireframe.rs
src/renderer/renderable/: mesh.rs  mod.rs  plane.rs
src/renderer/shaders/: bind_groups.md  sprite.wgsl  textureless_mesh.wgsl  unlit.wgsl
src/scene/: mod.rs
