[package]
name = "cobalt_asset_manager"
version = "0.1.0"
edition = "2021"

[dependencies]
cobalt_core = { path = "../cobalt_core" }
humantime = "2.1.0"
iced = {version = "0.13.0", default-features = false, features = ["tiny-skia", "fira-sans", "auto-detect-theme", "image"]}
iced_aw = {version = "0.11.0", features =[]}
iced_table = "0.12.0"
log = "0.4.22"
rfd = "0.15.0"
simple_logger = "5.0.0"
toml = "0.8.15"
