[package]
name = "cobalt_assets"
version = "0.1.0"
edition = "2021"

[dependencies]
cobalt_graphics = { path = "../cobalt_graphics" }
cobalt_ecs = { path = "../cobalt_ecs" }
toml = "0.8.15"
hashbrown = { version = "0.14.3", features = [
    "serde",
    "ahash",
], default-features = false }
uuid = { version = "1.10.0", features = ["serde", "v4", "fast-rng"] }
serde = { version = "1.0.196", features = ["derive"] }
bytes = { version = "1.7.2", features = ["serde"] }
parking_lot = { version = "0.12.1", features = [] }
log = "0.4.20"
thiserror = "1.0.56"
path-clean = "1.0.1"
flate2 = "1.0.30"
bincode = "1.3.3"
