[package]
name = "cobalt_core"
version = "0.1.0"
edition = "2021"

[features]
default = [
    # one renderer needs to be default for the tests to work
    "deferred_renderer",
]

# Enables more detailed performance statistics
debug_stats = []

# The renderer features are mutually exclusive
deferred_renderer = []

[dependencies]
# Graphics
wgpu = { version = "22.0.0", features = ["serde"] }
# wgpu-types = { version = "*", features = ["serde"] }
winit = "0.30.5"
bytemuck = { version = "1.14.1", features = ["derive", "must_cast"] }
image = "0.24.8"
gltf = { version = "1.4.0", features = [
    "extras",
    "names",
    "extensions",
    "KHR_lights_punctual",
    "KHR_materials_pbrSpecularGlossiness",
    "KHR_materials_unlit",
    "KHR_materials_specular",
] }

# Misc
serde = { version = "1.0.196", features = ["derive"] }
hashbrown = { version = "0.14.3", features = [
    "serde",
    "ahash",
], default-features = false }
pollster = "0.3.0"
thiserror = "1.0.56"
log = "0.4.20"
imstr = "0.2.0"
parking_lot = { version = "0.12.1", features = [] }
ultraviolet = { version = "0.9.2", features = ["serde", "bytemuck"] }
tobj = "4.0.1"
downcast = "0.11.0"
mutually_exclusive_features = "0.1.0"
log-once = "0.4.1"
half = { version = "2.4.1", features = ["serde", "bytemuck"] }
bytes = { version = "1.6.1", features = ["serde"] }
toml = "0.8.15"
flate2 = "1.0.30"
bincode = "1.3.3"
ron = "0.8.1"
uuid = { version = "1.10.0", features = ["serde", "v4", "fast-rng"] }

# ECS
serde_closure = "0.3.3"
rayon = "1.10.0"
path-clean = "1.0.1"
arc-swap = "1.7.1"

[dev-dependencies]
simple_logger = "5.0.0"
serde_yaml = "0.9.30"
rand = "0.8.5"
walkdir = "2.4.0"
