
[package]
name = "cobalt_graphics"
version = "0.1.0"
edition = "2021"

[dependencies]
# Graphics
wgpu = { version = "22.0.0", features = ["serde"] }
winit = "0.30.5"
bytemuck = { version = "1.14.1", features = ["derive", "must_cast"] }
parking_lot = "0.12.3"
half = "2.4.1"
thiserror = "1.0.63"
serde = { version = "1.0.21", features = ["derive"] }
image = "0.25.2"
ultraviolet = "0.9.2"
log = "0.4.22"
pollster = "0.3.0"
bytes = { version = "1.7.2", features = ["serde"] }